# opencv-rueppelli-1

./: .gitignore  CMakeLists.txt  Opencv-VS.sln  README.md  database_handler.h  main.cpp
Opencv-VS/: Opencv-VS.vcxproj  Opencv-VS.vcxproj.filters  main.cpp
Opencv-VS/docs/: functions.md
Opencv-VS/gtest/: unit_test.cpp
Opencv-VS/src/: database_handler.cpp  database_handler.h  detect_circles.cpp  detect_circles.h  histogram.cpp  histogram.h  image_manipulation.cpp  image_manipulation.h  remove_background.cpp  remove_background.h  sorting.cpp  sorting.h
docs/: functions.md
files/: CMakeLists.txt  CircleDetectionDatabase.db  DetectCircles.cpp  DetectCircles.h  crud.cpp  crud.h  image_bluring.cpp  image_bluring.h  initial.h
gtest/: CMakeLists.txt  unit_test.cpp
src/: CMakeLists.txt  DetectCircles.cpp  crud.cpp  crud.h  database_handler.cpp  database_handler.h  detect_circles.cpp  detect_circles.h  histogram.cpp  histogram.h  image_bluring.cpp  image_bluring.h  initial.cpp  initial.h  remove_background.cpp  remove_background.h  sorting.cpp  sorting.h
